oncokb/oncokb-eu/ingress/ingress_monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oncokb-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - grafana.eucentral.oncokb.org
      secretName: letsencrypt-nginx-private-key
  rules:
    - host: "grafana.eucentral.oncokb.org"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
  ingressClassName: nginx
