oncokb/oncokb-eu/ingress/ingress_oncokb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oncokb-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - eucentral.oncokb.org
        - grafana.eucentral.oncokb.org
      secretName: letsencrypt-nginx-private-key
  rules:
    - host: "eucentral.oncokb.org"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: oncokb-public
                port:
                  number: 9095
    - host: "grafana.eucentral.oncokb.org"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: oncokb-grafana
                port:
                  number: 80
  ingressClassName: nginx
